# spending-app-aiogram

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  constants.py  db.py  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  app_init.py  bot_setup.py  constants.py  db.py  fsm.py  handlers.py  logger_config.py  utils.py
